# ha-opencode

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
.forgejo/workflows/: mirror.yaml
custom_components/opencode_go/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  scrape.py  sensor.py  strings.json  usage_api.py
tests/: test_scrape.py  test_usage_api.py
